# imunano33

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  a00014.html  a00014_source.html  a00015.map  a00015.md5  a00016.map  a00016.md5  a00017.html  a00017_source.html  a00018.map  a00018.md5  a00019.map  a00019.md5  a00020.html  a00020_source.html  a00021.map  a00021.md5  a00023.html  a00023_source.html  a00024.map  a00024.md5  a00025.map  a00025.md5  a00026.html  a00026.js  a00026_source.html  a00027.map  a00027.md5  a00028.map  a00028.md5  a00029.html  a00029.js  a00029_source.html  a00030.map  a00030.md5  a00031.map  a00031.md5  (+133 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-fix.md
.github/workflows/: doc.yml  test.yml
doc/: CMakeLists.txt  index.md
example/: example.ino
include/imunano33/: climate.hpp  filter.hpp  imunano33.hpp  mathutil.hpp  quaternion.hpp  simplevectors.hpp  sv_embed.hpp  unit.hpp
script/: tidy.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+43 more)
test/: CMakeLists.txt  test_climate.cpp  test_filter.cpp  test_imunano33.cpp  test_mathutil.cpp  test_quat.cpp  testutil.hpp
